// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should match the snapshot with all data passed in correctly 1`] = `
<header
  className="header"
>
  <h1>
    WELCOME 
    <span>
      Chase
    </span>
  </h1>
  <h2>
    Ranking: Novice
  </h2>
  <p>
    Obscure StarWars Quote
  </p>
  <Link
    to="/"
  >
    <button
      className="show"
      onClick={[Function]}
    >
      Sign Out
    </button>
  </Link>
</header>
`;

exports[`Card should match the snapshot with empty strings passed in 1`] = `
<header
  className="header"
>
  <h1>
    WELCOME 
    <span />
  </h1>
  <h2 />
  <p />
  <Link
    to="/"
  >
    <button
      className="hide"
      onClick={[Function]}
    >
      Sign Out
    </button>
  </Link>
</header>
`;
